{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 31,
  "lineage": "55f9b24d-fbbe-96c3-84d6-318e6b4d6fc2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021f5c10b11b5163d",
            "arn": "arn:aws:ec2:eu-central-1:435037492811:instance/i-0d30fc4cc06e58c9f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d30fc4cc06e58c9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testterraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d190e872bbf10f5a",
            "private_dns": "ip-10-0-1-79.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-3-68-158-79.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.158.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d5f88ab81fab6221",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b53b13a342602907",
            "tags": {
              "Name": "task13-bastion"
            },
            "tags_all": {
              "Name": "task13-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f00fb758518584f9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security_groups.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021f5c10b11b5163d",
            "arn": "arn:aws:ec2:eu-central-1:435037492811:instance/i-0feddfdadeeed1bbf",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0feddfdadeeed1bbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testterraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e311e916ba183f9",
            "private_dns": "ip-10-0-2-87.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5a924c4125e5d1c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0166615836697f6aa",
            "tags": {
              "Name": "task13-private"
            },
            "tags_all": {
              "Name": "task13-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3ddfc388462e207"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security_groups.aws_security_group.bastion_sg",
            "module.security_groups.aws_security_group.private_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:security-group/sg-0f00fb758518584f9",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f00fb758518584f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.75.105.81/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task13-bastion-sg",
            "name_prefix": "",
            "owner_id": "435037492811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task13-bastion-sg"
            },
            "tags_all": {
              "Name": "task13-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:security-group/sg-0a3ddfc388462e207",
            "description": "Security group for private EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3ddfc388462e207",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f00fb758518584f9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task13-private-sg",
            "name_prefix": "",
            "owner_id": "435037492811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task13-private-sg"
            },
            "tags_all": {
              "Name": "task13-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:security-group/sg-0590fab048d922d2c",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590fab048d922d2c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from private EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3ddfc388462e207"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "task13-rds-sg",
            "name_prefix": "",
            "owner_id": "435037492811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task13-rds-sg"
            },
            "tags_all": {
              "Name": "task13-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_sg",
            "module.security_groups.aws_security_group.private_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:internet-gateway/igw-05312c5244d6a5ccb",
            "id": "igw-05312c5244d6a5ccb",
            "owner_id": "435037492811",
            "tags": {
              "Name": "task13-igw"
            },
            "tags_all": {
              "Name": "task13-igw"
            },
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:route-table/rtb-0dda3c835ff92eea8",
            "id": "rtb-0dda3c835ff92eea8",
            "owner_id": "435037492811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05312c5244d6a5ccb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task13-public-rt"
            },
            "tags_all": {
              "Name": "task13-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ff7dbd153bf7042",
            "route_table_id": "rtb-0dda3c835ff92eea8",
            "subnet_id": "subnet-0b53b13a342602907"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:subnet/subnet-0166615836697f6aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0166615836697f6aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435037492811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task13-private-subnet-1"
            },
            "tags_all": {
              "Name": "task13-private-subnet-1"
            },
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:subnet/subnet-00e3594a059d648db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3594a059d648db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435037492811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task13-private-subnet-2"
            },
            "tags_all": {
              "Name": "task13-private-subnet-2"
            },
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:subnet/subnet-0b53b13a342602907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53b13a342602907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435037492811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task13-public-subnet"
            },
            "tags_all": {
              "Name": "task13-public-subnet"
            },
            "vpc_id": "vpc-05d605d2bd46860b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:435037492811:vpc/vpc-05d605d2bd46860b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0232ddfef5e7077f9",
            "default_route_table_id": "rtb-0b2e523f1d1241c2b",
            "default_security_group_id": "sg-0bddccef421f5666d",
            "dhcp_options_id": "dopt-0038e9960f79b4985",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d605d2bd46860b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2e523f1d1241c2b",
            "owner_id": "435037492811",
            "tags": {
              "Name": "task13-vpc"
            },
            "tags_all": {
              "Name": "task13-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}